fix unrelated expand/collapse issue
the before pseudo element of parent element was higher than the collapse trigger so if you clicked on arrow nothing happened

--- a/cms/static/cms/sass/components/_structureboard.scss
+++ b/cms/static/cms/sass/components/_structureboard.scss
@@ -215,6 +215,7 @@
             border: 2px solid $structure-bgcolor;
         }
         .cms-dragitem-text {
+            position: relative;
             display: block;
             overflow: hidden;
             text-overflow: ellipsis;
